static/css/style.css
/**GLOBAL**/


body {
    margin: 0;
    min-height: 100vh;
    font-family: "Cormorant garamond", sans-serif;
    font-weight: 300;
    background: url("background.jpg") center/cover fixed no-repeat;
    color:rgb(255, 255, 255);
    
    /**make sure footer stays at bottom 
    https://dev.to/nehalahmadkhan/how-to-make-footer-stick-to-bottom-of-web-page-3i14- **/
    display: flex;
    flex-direction: column;

}

.overlay {
    z-index: 5000;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0);
    opacity: 1;
    pointer-events: none;
    animation: fadeToClear 1s;
}

@keyframes fadeToClear {
    from {
        background-color: rgba(0, 0, 0, 1); /* Start with a black background */
    }
    to {
        background-color: rgba(0, 0, 0, 0); /* Fade to a transparent background */
    }
}

h1 {
    margin: 0;
    text-align: left;
    font-size: 70px;
    padding-left: 8%;
    padding-top: 50px;
}

h2 {
    font-size: 33px;
}

a {
    text-decoration: none;
    color: #cfcfcf;
}

.button {
    font-family: "Cormorant garamond", sans-serif;
    font-size: 20px;
    color: #cfcfcf;
    background-color: #00691e;
    border: none;
    padding: 12px 20px;
    border-radius: 100px ;
    cursor: pointer;
    margin: 5px 2px;
    float: left;
    transition: all ease-in-out 180ms;
}

.button:hover {
    background-color: #00421334;
    color: #ffffff;
}


/**NAV BAR
---------------------------------------------------------------**/


#container {
    width: 100%;
    margin: 0 auto;
    background: #1a1a1a5d;
    transition: 0.4s;
}

header {
    position: fixed;
    top: 0;
    z-index: 500;
    width: 100%;
}

/**clearfix
-aligns navbar elements correctly, corrects height of navbar**/
header::after {
    content: '';
    display: table;
    clear: both;
}

nav {
    text-align: center;
}

nav ul {
    margin: 0;
    list-style:none;
}

nav li {
    display: inline-block;
    margin-left: 46px;
    padding: 5px 0;
    position: relative;
}

nav a {
    text-align: center;
    font-size: 19px;
}

/**link hover animations**/

nav a:hover {
    color: #ffffff;
}

nav a::before {
    content: '';
    display: block;
    height: 3px;
    background-color: #cfcfcf;

    position: absolute;
    bottom:0;
    width: 0%;

    transition: all ease-in-out 250ms;
}

nav a:hover::before {
    width: 100%;
}


/**FOOTER
-----------------------------------------------------------------**/

.footer {
    font-family: Arial, Helvetica, sans-serif;
    background-color: rgb(26, 26, 26);
    text-align: center;
    margin: 0;
    margin-top: auto; /**make sure footer stays at bottom**/
    padding: 20px;
}


/**HOME PAGE
-----------------------------------------------------------------**/

.home {
    width: 100%;
    height: 85vh;
    margin: 0 auto;
    padding: 4% 0;
    padding-bottom: 6%;
    background: url("home_page.jpg") center/cover scroll no-repeat ;
    position: relative;
}

.home h2 {
    padding-left: 8%;
    font-size: 24px;
}

.content h3 {
    font-size: 26px;
}

.content_wrapper {
    width: 100%;
    display: flex;
    justify-content: center;
    gap: 19px;
    position: absolute;
    bottom: 50px;
}

.content {
    background-color: #00000083;
    width: 23%;
    padding: 20px;
}

.content img {
    width: 80px;
    height: 80px;
}


/**all_frogs page
----------------------------------------------------------------------------**/

.all_frogs h2 {
    padding: 0 8%;
}

/**back_button hover animation**/
.back_button {
    position: relative;
}

.back_button a {
    margin-top: 0;
    margin-left: 9%;
    padding-top: 20px;
    font-size: 36px;
    text-align: left;
}

.back_button a:hover {
    color: #ffffff;
    
}

.back_button a::before {
    content: '';
    display: block;
    height: 3px;
    background-color: #cfcfcf;
    margin-left: 9%;

    position: absolute;
    bottom:0;
    width: 0px;

    transition: all ease-in-out 250ms;
}

.back_button a:hover::before {
    width: 101px;
}

/**grid items 
for all_frogs and search results pages**/

.grid-item {
  background-color: rgb(43, 43, 43);
  text-align: center;
  transition: all ease-in-out 250ms;
  height: 380px;
}

/**grid item hover animation**/
.grid-item:hover{
    transform: scale(1.1);
}

.grid-container {
    padding: 110px 8%;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
    gap: 42px;
}

.grid-container img {
    object-fit: cover;
    width: 100%;
    height: 68%;
}

.grid-item a {
    color: #cfcfcf;
    text-decoration: none;
    margin: 0;
    font-size: 30px;
}

.grid-item h3 {
    color: #cfcfcf;
    font-size: 15px;
    margin-top: 0;
    font-style: italic;
    font-weight: 3;
}

.sorting-dropdown {
    text-align: left;
    font-size: 20px;
    margin: 20px 8% 0;
    height: 35px;
    border-radius: 4px;
    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
    font-family: "Cormorant garamond", sans-serif;
    font-weight: 250;
}


/**frog page
-------------------------------------------------------------------------**/

.info_container {
    display: flex;
    flex-wrap: wrap;
    padding-top: 0px;
    margin: 0 20%;
    justify-content: center;
    gap: 30px;
}

.title {
    text-align: center;
    padding: 100px;
}

.title h2 {
    padding: 0;
    margin: 0;
    font-size: 60px;
}

.title h3 {
    margin: 6px;
    font-size: 30px;
    font-style: italic;
    font-weight: 2;
}

.info_container img {
    object-fit: cover;
    width: 60%;
    flex-wrap: 1;
    height: 410px;
}

.info{
    width: 30%;
    flex-grow: 1;
    padding-left: 20px;
    background-color: #474747;
    height: 410px;
}


.info p {
    font-size: 16px;
    padding: 0;
    margin: 0;
    color: #cfcfcf;
}

.info h2 {
    font-size: 20px;
    padding: 0;
    margin-bottom: 4px;
}

.description {
    font-size: 16px;
    line-height: 1.8;
    padding: 30px;
    flex-basis: auto;
    background-color: #474747;
}



/**EXPLORE PAGE
-------------------------------------------------------------------**/

.explore {
    display: flex;
    flex-wrap: wrap;
    column-gap: 60px;
    row-gap: 200px;
    margin: 50px 0 200px 8%;
}

.explore .button {
    float:right;
}

.inputs {
    width: 415px;
    margin: 0;
    height: 360px;
}

.input_container {
    padding-top: 40px;
    width: 100%;
    height: 100%;
    background-color: rgb(43, 43, 43);
}

.input_container h3 {
    margin: 19px 20px 23px 40px;
    font-size: 25px;
    font-weight: 5;
}

.input_container input[list] {
    height: 12px;
    border: none;
    float: right;   
    border-radius: 10px;
    padding: 10px;
    box-shadow:0 0 15px 4px rgba(0,0,0,0.06);
}

/**random_frogs**/

.discover {
    width: 60%;
    margin: 0 ;
    color: white;
}

.random_frog_item img {
    object-fit: cover;
    width: 100%;
    height: 70%;
}

.random_frog_container {
    display: flex;
    gap: 22px;
    height: 400px;
}

.random_frog_item {
    width: 30%;
    background-color: rgb(43, 43, 43); 
    transition: all ease-in-out 250ms;
}

.random_frog_container h3 {
    padding-left: 10px;
    font-size: 22px;
    font-weight: 100;
    margin: 0;
}

.random_frog_container h4 {
    font-style: italic;
    font-weight: 1;
    padding-left: 15px;
    margin: 0;
}

/**hover animations**/

.random_frog_item:hover {
    transform: scale(1.1);
}



/**INSERT PAGE
-----------------------------------------------------------------------**/

.insert_container {
    width: 70%;
    background-color: #474747;
    padding: 2% 8% 8%;
    margin: 40px 130px 180px;
}

/**ABOUT PAGE
----------------------------------------------------------------------**/

.about {
    padding: 0 8%;
}

